# tamva

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  docker-compose.yml  install.sh  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
analysis/: bd_rate_roi.ipynb  quality_overall.ipynb
docker/: Dockerfile
view_adaptation/: CMakeLists.txt  README.md  package.xml
view_adaptation/launch/: view_adaptation_local.launch  view_adaptation_local_scenario_runner.launch  view_adaptation_multi_server.launch  view_adaptation_multi_server_scenario_runner.launch  view_adaptation_single_server.launch  view_adaptation_single_server_scenario_runner.launch
view_adaptation_msgs/: CMakeLists.txt  package.xml
view_adaptation_msgs/msg/: Bandwidth.msg  ViewPriority.msg
view_mda/: CMakeLists.txt  README.md  package.xml
view_mda/launch/: view_mda.launch
view_mda/source/: CMakeLists.txt
view_mda/source/include/: view_mda.h
view_mda/source/model/: CMakeLists.txt
view_mda/source/model/include/: mda.h  optimal_fps_estimator.h  optimal_spatial_scale_estimator.h
view_mda/source/model/src/: mda.cpp  optimal_fps_estimator.cpp  optimal_spatial_scale_estimator.cpp
view_mda/source/src/: view_mda.cpp  view_mda_node.cpp
view_mda/source/vqm/: CMakeLists.txt
view_mda/source/vqm/include/: frame_history.h  mdvqm.h  mdvqm_param.h  pixel_bitrate.h
view_mda/source/vqm/src/: frame_history.cpp  mdvqm.cpp  pixel_bitrate.cpp
view_mda/test/: CMakeLists.txt
view_mda/test/model/: mda_test.cpp
view_mda/test/vqm/: frame_history_test.cpp  mdvqm_test.cpp
view_prioritization/: CMakeLists.txt  README.md  package.xml  setup.py
view_prioritization/launch/: view_prioritization.launch
view_prioritization/scripts/: view_prioritization_node.py
view_prioritization/src/view_prioritization/: parser.py  prioritization.py
view_prioritization/test/: test_parser.py  test_proritization.py  testrunner.py
view_roi_filter/: CMakeLists.txt  README.md  package.xml
view_roi_filter/include/: roi_filter_mask.h
view_roi_filter/launch/: apply_roi_mask_on_bag.launch  export_image_from_bag.launch  view_roi_filter_mask.launch
view_roi_filter/script/: student_evaluation.sh
view_roi_filter/src/: roi_filter_mask.cpp  roi_filter_mask_node.cpp
view_roi_filter/test/: CMakeLists.txt  roi_filter_mask_test.cpp
