<package format="2">
    <name>view_adaptation_msgs</name>
    <version>0.0.0</version>
    <description>The view adaptation messages package</description>
    <maintainer email="name.surname@tum.de">Markus Hofbauer</maintainer>
    <author email="name.surname@tum.de">Markus Hofbauer</author>
    <license>MIT</license>
    <url type="website">https://github.com/hofbi/tamva</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <export>
    </export>
</package>
